migrating to encode/decode functions from DDDPEMEncoder